# zenoh

./: Cargo.toml
.github/workflows/: zenoh-rpc.yml
commons/zenoh-config/src/: lib.rs
plugins/zenoh-backend-traits/src/: config.rs  config.test.rs  lib.rs
plugins/zenoh-plugin-storage-manager/: Cargo.toml
plugins/zenoh-plugin-storage-manager/benches/: replication_catchup.rs
plugins/zenoh-plugin-storage-manager/src/replication/: configuration.rs  core.rs  log.rs
plugins/zenoh-plugin-storage-manager/src/replication/core/: aligner_query.rs  aligner_reply.rs
plugins/zenoh-plugin-storage-manager/src/storages_mgt/: service.rs
plugins/zenoh-plugin-storage-manager/tests/: ack_operations.rs  prefix_gc.rs
zenoh-ext/: Cargo.toml
zenoh-ext/src/: ack_put.rs  cursor_persistence.rs  event_subscriber.rs  lib.rs  typed.rs
zenoh-ext/src/rpc/: client.rs  deadline.rs  discovery.rs  error.rs  mod.rs  server.rs
zenoh-ext/tests/: ack_put.rs  event_subscriber.rs  rpc.rs  rpc_client.rs  rpc_discovery.rs  rpc_e2e.rs  rpc_server.rs  typed.rs
zenoh-rpc/: Cargo.toml  README.md  clippy.toml
zenoh-rpc/examples/: rpc_client.rs  rpc_deadline.rs  rpc_discovery.rs  rpc_server.rs
zenoh-rpc/src/: client.rs  deadline.rs  discovery.rs  error.rs  lib.rs  server.rs
zenoh-rpc/tests/: rpc.rs  rpc_client.rs  rpc_discovery.rs  rpc_e2e.rs  rpc_server.rs
zenoh/src/: lib.rs
zenoh/src/api/: admin.rs
zenoh/src/api/builders/: event_subscriber.rs  mod.rs  query.rs
zenoh/src/net/runtime/: mod.rs
zenoh/tests/: acl.rs  namespace.rs  namespace_isolation.rs
(+7 files in other folders)
